@@ -22,7 +22,7 @@ Boston, MA 02111-1307, USA.  */
 #ifndef __SCAN_H__
 #define __SCAN_H__
 
-void open_src(char *name, int isinclude);
+void open_src(const char *name, int isinclude);
 int close_file();
 
 #endif
